# jax-stsc-ops

./: .gitignore  .isort.cfg  CMakeLists.txt  LICENSE  README.md  demo.py  pyproject.toml
benchmarks/: conv-preprocessing.py  cumulative-ema.py  multi-channel-segment-cumulative-ema.py  segment-cumulative-ema.py
lib/: cpu_ops.cc  gpu_ops.cc  jax_stsc_ops.h  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h
src/jax_stsc_ops/: __init__.py  conv_preprocessing.py  counting_argsort.py  cumulative_ema.py  registrations.py  sampling.py
tests/: test_conv_preprocessing.py  test_counting_argsort.py  test_cumulative_ema.py  test_sampling.py
