[project]
name = "jax-stsc-ops"
description = "Custom C++ and CUDA ops and jax interface for Submanifold Time Surface Convolutions"
readme = "README.md"
authors = [{ name = "Dominic Jack", email = "thedomjack@gmail.com" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/jackd/jax-stsc-ops" }
dependencies = ["jax>=0.4.16", "jaxlib>=0.4.16"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["pybind11>=2.6", "scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/jax_stsc_ops/jax_stsc_ops_version.py"]
wheel.install-dir = "jax_stsc_ops"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"

[tool.setuptools_scm]
write_to = "src/jax_stsc_ops/jax_stsc_ops_version.py"
